...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone" />


    <EditText
        android:id="@+id/username1"
        android:layout_width="230dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle13"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/user"
...
        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle13"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/pass"
...
